test/errors/unsupportedAs.compopts
--detailed-errors # unsupportedAs-detailed.good
--no-detailed-errors # unsupportedAs-brief.good
